--- a/src/style/App.css
+++ b/src/style/App.css
@@ -19,8 +19,6 @@ body{
     flex: 0 0 1000px;
 
     font-family: 'Inter', sans-serif;
-
-
     border-left: 1px solid #2F3336;
     border-right: 1px solid #2F3336;
 }
@@ -197,4 +195,39 @@ body{
     align-items: center;
     justify-content: center;
     gap: 20px;
+}
+.sidebars{
+  display:flex;
+}
+.sidebar{
+  width:300px;
+}
+.icon{
+  height:70px;
+  padding: 27px 0px 10px 0px;
+  margin:5px;
+
+}
+.side-bar-menu{
+  display:block;
+  flex-direction:column;
+  align-items:center;
+  font-size:25px;
+  font-family: 'Inter', sans-serif;
+  justify-content:space-between;
+  gap:2rem;
+  padding:1rem;
+}
+.side-bar-icon{
+  padding-right:1rem;
+}
+.side-bar-button{
+  text-transform: capitalize;
+  padding: 1rem 5rem;
+  margin:2rem;
+  border: none;
+  border-radius: 50px;
+  background-color: #1D9BF0;
+  color: white;
+  font-size: 1.3rem;
 }
