--- a/src/style/App.css
+++ b/src/style/App.css
@@ -97,12 +97,12 @@ body{
 
 .button {
     text-transform: capitalize;
-    padding: 1rem 2rem;
+    padding: 0.7rem 2rem;
     border: none;
     border-radius: 50px;
     background-color: #1D9BF0;
     color: white;
-    font-size: 1rem;
+    font-size: 0.8rem;
     
     
 }
@@ -111,7 +111,7 @@ body{
     justify-content: flex-start;
     align-items: flex-start;
     gap: 20px;
-    padding: 1.5rem 1rem;
+    padding: 10px 10px;
     border-bottom: 1px solid #2F3336;
 }
 
@@ -131,7 +131,7 @@ body{
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 30px;
+    gap: 20px;
     width: 100%;
 }
 .tweet-body{
@@ -144,7 +144,7 @@ body{
     justify-content: flex-start;
     align-items: flex-start;
     gap: 10px;
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
 
 .tweet-title svg{
@@ -152,7 +152,7 @@ body{
     height: auto;
 }
 .tweet-title-author{
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 .tweet-title-details{
     color: #6E767D;
@@ -179,7 +179,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 5rem;
+    gap: 3rem;
     color: #f2f2f2;
     font-size: 1rem;
 }
@@ -240,10 +240,10 @@ body{
 }
 
 .trends-editor-input {
-    height: 40px;
+    height: 30px;
     border: none;
     outline: none;
-    font-size: 1.2rem;
+    font-size: 1rem;
     background-color: #202327;
     color: #fff;
     resize: none;
@@ -254,15 +254,15 @@ body{
   align-items:center;
   border-radius: 50px;
   background-color: #202327;
-  padding:7px;
-  margin: 20px 10px;
+  padding:5px;
+  margin: 25px 20px;
 }
 
 .trendings{
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 1.2rem 0;
-  font-size: 13px;
+  
+  font-size: 15px;
 }
 .trending{
   display:flex;
@@ -270,16 +270,22 @@ body{
 
 .trendings span {
   color: #6E767D;
+  font-size:12px;
 }
 
 .trendings p{ 
   color: #6E767D;
+  font-size:12px;
 }
 
 .trendings h2{ 
-  font-size:15px;
+  font-size:12px;
 }
-
+.trendingNotifications{
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem 0rem;
+}
 .trendingListMessage{
   width:90%;
   display:block;
@@ -293,4 +299,31 @@ body{
 }
 .trendingTitle{
   font-size: 22px;
+}
+.trendingFollow{
+    flex: 0 0 50px;
+}
+.trendingFollow-body{
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+}
+.trendingFollow-body p{
+    color: #6E767D;
+    font-size: 11px;
+}
+.trendingFollow-title{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    font-size: 1.1rem;
+}
+.FollowTrending{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    padding: 10px 10px;
+    border-bottom: 1px solid #2F3336;
 }
