--- a/src/style/App.css
+++ b/src/style/App.css
@@ -56,6 +56,8 @@ body{
     /*height: 70px;*/
     /*width: 70px;*/
     flex: 0 0 70px;
+    margin: none;
+    padding: none;
     /*padding: 0 rem;*/
 }
 
@@ -261,6 +263,7 @@ body{
 .trendings{
   justify-content: flex-start;
   align-items: flex-start;
+  margin-right: 4.6rem;
   
   font-size: 15px;
 }
@@ -321,9 +324,25 @@ body{
 }
 .FollowTrending{
     display: flex;
-    justify-content: flex-start;
+    justify-content:space-evenly;
     align-items: flex-start;
     gap: 10px;
     padding: 10px 10px;
     border-bottom: 1px solid #2F3336;
+}
+.ButtonSeeMoreTrending{
+    text-decoration: none;
+}
+.imageAvatar{
+    margin-left: -10px;
+}
+
+.svg-element{
+    color: #ddd;
+    transition-duration: .3s;
+}
+
+.svg-element:hover{
+    color: red;
+    cursor: pointer;
 }
