--- a/src/style/App.css
+++ b/src/style/App.css
@@ -217,7 +217,7 @@ body{
   margin:5px;
 
 }
-.side-bar-menu{
+.side-bar-menu {
   display:block;
   flex-direction:column;
   align-items:center;
@@ -226,6 +226,12 @@ body{
   justify-content:space-between;
   gap:2rem;
   padding:10px;
+  color: #ddd;
+  text-decoration: none;
+}
+
+.side-bar-menu h2{
+    text-decoration: none;
 }
 .side-bar-icon{
   padding-right:1rem;
@@ -261,10 +267,8 @@ body{
 }
 
 .trendings{
-  justify-content: flex-start;
-  align-items: flex-start;
-  margin-right: 4.6rem;
-  
+  flex-direction: column;
+  inline-size: 100px;
   font-size: 15px;
 }
 .trending{
@@ -324,7 +328,7 @@ body{
 }
 .FollowTrending{
     display: flex;
-    justify-content:space-evenly;
+    justify-content:space-between;
     align-items: flex-start;
     gap: 10px;
     padding: 10px 10px;
@@ -332,9 +336,14 @@ body{
 }
 .ButtonSeeMoreTrending{
     text-decoration: none;
+    color: #ddd;
 }
-.imageAvatar{
-    margin-left: -10px;
+.trendingFollow-title{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 2px;
+    font-size: 1rem;
 }
 
 .svg-element{
