--- a/src/style/App.css
+++ b/src/style/App.css
@@ -23,8 +23,6 @@ body{
     border-right: 1px solid #2F3336;
 }
 
-
-
 .header {
     padding: 1.5rem 1rem;
     display: flex;
@@ -99,7 +97,7 @@ body{
 
 .button {
     text-transform: capitalize;
-    padding: 0.7rem 2rem;
+    padding: 0.7rem 1.7rem;
     border: none;
     border-radius: 50px;
     background-color: #1D9BF0;
@@ -191,6 +189,7 @@ body{
     justify-content: center;
     gap: 20px;
 }
+
 .sidebars{
   display:flex;
   position:sticky;
@@ -222,6 +221,11 @@ body{
   color: #ddd;
   text-decoration: none;
 }
+.side-bar-menu:hover{
+    background-color: #151617;
+    width: 9rem;
+    border-radius: 30px;
+}
 
 .side-bar-menu h2{
     text-decoration: none;
@@ -231,7 +235,7 @@ body{
 }
 .side-bar-button{
   text-transform: capitalize;
-  padding: 1rem 4rem;
+  padding: 1rem 3rem;
   margin:1rem;
   border: none;
   border-radius: 50px;
@@ -321,7 +325,7 @@ body{
 }
 .FollowTrending{
     display: flex;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items: flex-start;
     gap: 10px;
     padding: 10px 10px;
@@ -336,7 +340,7 @@ body{
     justify-content: flex-start;
     align-items: flex-start;
     gap: 2px;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 .buttonIconAction{
     background: rgb(0, 0, 0);
