--- a/src/style/App.css
+++ b/src/style/App.css
@@ -187,6 +187,7 @@ body{
     gap: 3rem;
 
 }
+.tweet-action-share,
 .tweet-action-vector,
 .tweet-action{
     display: flex;
@@ -194,21 +195,21 @@ body{
     justify-content: center;
     gap: 1px;
 }
+.tweet-share,
 .tweet-vector,
 .tweetIcon{
-    padding: 8px;
+    padding: 10px;
     justify-content: center;
     align-items: center;
 }
+
 .tweet-action:hover {
    color: #f918819f;
    cursor: pointer;
 }
 .tweet-action:hover .tweetIcon {
-    background: #f918802f;
+    background: rgba(163, 8, 119, 0.233);
     border-radius: 50%;
-    justify-content: center;
-    align-items: center;
  }
  .tweet-action:hover .iconRed svg path{  
     stroke: #f918819f;
@@ -217,19 +218,30 @@ body{
     fill:none;
     stroke: white;
 }
+.tweet-action-vector:hover .tweet-vector svg path,
 .tweet-action-vector:hover {
     color: #00BA7c;
     fill: #00BA7c;
+    stroke: #00BA7c;
+    cursor: pointer;
 }
 .tweet-action-vector:hover .tweet-vector{
-    background: #00BA7c;
+    background: rgba(0, 80, 0, 0.20);
     border-radius: 50%;
-    justify-content: center;
-    align-items: center;
 }
-.tweet-action-vector:hover .tweet-vector{  
-    stroke: #00BA7c;
- }
+.tweet-action-share:hover,
+.tweet-action-share:hover .tweet-share svg path ,
+.tweet-action-share:hover .tweet-share{
+    stroke: #1D9BF0;
+    fill: #1D9BF0;
+    color: #1D9BF0;
+    cursor: pointer;
+}
+.tweet-share svg path:hover,
+.tweet-action-share:hover .tweet-share{
+    background: #094a7567;
+    border-radius: 50%;
+}
 .sidebars{
   display:flex;
   position:sticky;
