--- a/src/style/App.css
+++ b/src/style/App.css
@@ -48,6 +48,7 @@ body{
     gap: 20px;
     padding:  1rem 1rem;
     border-bottom: 1px solid #2F3336;
+    
 }
 
 .avatar {
@@ -77,9 +78,11 @@ body{
     font-size: 1.5rem;
     background-color: black;
     color: white;
-    resize: none;
+    resize: inline;
     padding: 20px 0 0 0;
+    
 }
+
 
 .tweet-editor-buttons {
     display: flex;
